[B]Version 0.2.8[/B]
- Found my artistic side and made a graphic for icon.png.
- currently checks for 6 possible string formats for a playable url.  Avoid playing Viking for now as it uses rtmp and wanted to stall out for me.
- PlaySong() for Radio Stations.
- Parsing for Items.
- Main Menu
- Have "NOT" got around to cleaning up settings from the searchmp3mobi and prior projects.
- Code Cleanup. 
- Addon.xml setup.  Addon Type set to Audio.  Other information setup.
- inital build forked from my plugin.audio.searchmp3mobi, plugin.video.moviefork & plugin.video.solarmovie.so projects.
